--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "angular2-materialize": "^15.1.10",
+    "hammerjs": "^2.0.8",
+    "jquery": "^2.2.4",
+    "materialize-angular": "^0.7.10",
+    "materialize-css": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
