--- a/package.json
+++ b/package.json
@@ -10,22 +10,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.1",
-    "@angular/common": "~12.0.1",
-    "@angular/compiler": "~12.0.1",
-    "@angular/core": "~12.0.1",
-    "@angular/forms": "~12.0.1",
-    "@angular/platform-browser": "~12.0.1",
-    "@angular/platform-browser-dynamic": "~12.0.1",
-    "@angular/router": "~12.0.1",
-    "angular2-materialize": "^15.1.10",
-    "hammerjs": "^2.0.8",
-    "jquery": "^2.2.4",
-    "materialize-angular": "^0.7.10",
-    "materialize-css": "^1.0.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "11.0.8",
+    "@angular/common": "11.0.8",
+    "@angular/compiler": "11.0.8",
+    "@angular/core": "11.0.8",
+    "@angular/forms": "11.0.8",
+    "@angular/platform-browser": "11.0.8",
+    "@angular/platform-browser-dynamic": "11.0.8",
+    "@angular/router": "11.0.8",
+    "angular2-materialize": "15.1.10",
+    "materialize-css": "0.100.2",
+    "rxjs": "6.6.3",
+    "src": "^1.1.2",
+    "tslib": "2.1.0",
+    "zone.js": "0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.1",
