--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "fba42272-b7fa-4966-8995-bc016fc8130e"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
